fixed so the progressbar stays visible when the menus disapears

--- a/filter/src/components/ProgressBar/index.css
+++ b/filter/src/components/ProgressBar/index.css
@@ -8,5 +8,5 @@
 }
 
 .progressBar.false{
-  top: -6px;
+  top: 0px;
 }
